--- a/templates/hyper_link/story.html.twig
+++ b/templates/hyper_link/story.html.twig
@@ -2,7 +2,8 @@
 
 {% block content %}
 {% if showCanvas %}
-<canvas id="screen" width="800" height="400" style="background: #000; width: 100%; max-width: 800px; height: auto; display: block;"></canvas>
+<canvas id="screen" data-scene-id="{{ storyNodeKey }}" width="800" height="400" style="background: #000; width: 100%; max-width: 800px; height: auto; display: block;"></canvas>
 {% endif %}
 {% include 'hyper_link/' ~ storyNodeKey ~ '.html.twig' %}
+<script type="module" src="{{ asset('build/scene-bootstrap.js') }}"></script>
 {% endblock %}
