--- a/templates/hyper_link/prologue3.html.twig
+++ b/templates/hyper_link/prologue3.html.twig
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="scene active" id="scene-1iii">
   <div class="dialogue">
-    <p>Woah!</p>
-    <p>Seriously. You need to stop clicking links.</p>
-    <p>Do you have any idea where these links have been? Where they <a>go</a>?</p>
-    <p>Just stop. <a href="{{ path('hyperlink_jump', { nextNodeKey: 'prologue4' }) }}">Okay?</span></p>
+    <p class="character-dialogue" id="dialogue1">Woah!</p>
+    <p class="character-dialogue hidden" id="dialogue2">Seriously. You need to stop clicking links.</p>
+    <p class="character-dialogue hidden" id="dialogue3">Do you have any idea where these links have been? Where they <a>go</a>?</p>
+    <p class="choices hidden">Just stop. <a href="{{ path('hyperlink_jump', { nextNodeKey: 'prologue4' }) }}">Okay?</span></p>
   </div>
 </div>
 {% endblock %}
