--- a/templates/hyper_link/birthdayYes.html.twig
+++ b/templates/hyper_link/birthdayYes.html.twig
@@ -3,7 +3,8 @@
 {% block content %}
     <div class="scene" id="prologue4">
         <div class="dialogue">
-            <p class="character-dialogue" id="dialogue1">Awesome!</p>
+          <p class="character-dialogue" id="dialogue1">Awesome!</p>
+          <p class="character-dialogue" id="dialogue2">Here is all the info!</p>
         </div>
         <div class="choices hidden">
             <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayYes' }) }}">Yes!</a>
