--- a/templates/hyper_link/birthdayYes.html.twig
+++ b/templates/hyper_link/birthdayYes.html.twig
@@ -1,16 +1,35 @@
 {% extends 'hyper_link/base.html.twig' %}
 
 {% block content %}
-    <div class="scene" id="prologue4">
-        <div class="dialogue">
-          <p class="character-dialogue" id="dialogue1">Awesome!</p>
-          <p class="character-dialogue" id="dialogue2">Here is all the info!</p>
-        </div>
-        <div class="choices hidden">
-            <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayYes' }) }}">Yes!</a>
-            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhen' }) }}">When it it?</a>
-            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhere' }) }}">Where it it?</a>            
-        </div>
+<div class="scene" id="birthdayConfirm">
+  <div class="dialogue" style="width:48%; float:left">
+    <p class="character-dialogue" id="dialogue1">Awesome.</p>
+    <p class="character-dialogue" id="dialogue2">I can't wait to see you!</p>
+    <p class="character-dialogue" id="dialogue3">Until then</p>    
+    <div class="choices hidden">
+      <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayYes' }) }}">Should I bring anything?</a>
+      <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayNo' }) }}">What is this place?</a>
     </div>
+  </div>
+  <div style="width:5px"></div> 
+  <div style="width:50%; float:right;">
+    <div class="invitation-card" style="padding: 1em; border: 2px solid #333; border-radius: 12px; font-family: 'Georgia', serif; background: #fdfcf8; box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
+      <h2 style="text-align:center; margin:0;">Greg Is Thirty</h2>
+      <p style="text-align:center; font-style:italic; margin:0 0 1em 0;">an event</p>
+      
+      <p style="text-align:center; margin:0.5em 0;"><strong>Sunday, July 20th</strong></p>
+      <p style="text-align:center; margin:0.5em 0;">5 PM - midnight</p>
+      
+      <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">hosted at</p>
+      <p style="text-align:center; margin:0;"><strong>Acacia</strong></p>
+      <p style="text-align:center; margin:0;">2108 E Carson Street</p>
+      <p style="text-align:center; margin:0;">Pittsburgh, PA</p>
+      
+      <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">featuring</p>
+      <p style="text-align:center; margin:0;">Greg’s favorite cocktails</p>
+      <p style="text-align:center; font-style:italic; margin:0.5em 0 0 0;">and</p>
+      <p style="text-align:center; margin:0;">Light Snacks</p>
+    </div>
+  </div>
+</div>
 {% endblock %}
-
