--- a/templates/hyper_link/birthdayConfirm.html.twig
+++ b/templates/hyper_link/birthdayConfirm.html.twig
@@ -11,22 +11,14 @@
   </div>
   <div style="width:5px"></div> 
   <div style="width:50%; float:right;">
+    <div><br><br></div>
     <div class="invitation-card" style="padding: 1em; border: 2px solid #333; border-radius: 12px; font-family: 'Georgia', serif; background: #fdfcf8; box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
-      <h2 style="text-align:center; margin:0;">Greg Is Thirty</h2>
-      <p style="text-align:center; font-style:italic; margin:0 0 1em 0;">an event</p>
-      
       <p style="text-align:center; margin:0.5em 0;"><strong>Sunday, July 20th</strong></p>
-      <p style="text-align:center; margin:0.5em 0;">5 PM - midnight</p>
-      
-      <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">hosted at</p>
+      <p style="text-align:center; margin:0.5em 0;"><strong>5 PM - 11 PM</strong>(ish)</p>
+
       <p style="text-align:center; margin:0;"><strong>Acacia</strong></p>
       <p style="text-align:center; margin:0;">2108 E Carson Street</p>
       <p style="text-align:center; margin:0;">Pittsburgh, PA</p>
-      
-      <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">featuring</p>
-      <p style="text-align:center; margin:0;">Greg’s favorite cocktails</p>
-      <p style="text-align:center; font-style:italic; margin:0.5em 0 0 0;">and</p>
-      <p style="text-align:center; margin:0;">Light Snacks</p>
     </div>
   </div>
 </div>
