--- a/templates/hyper_link/birthdayNo.html.twig
+++ b/templates/hyper_link/birthdayNo.html.twig
@@ -3,14 +3,15 @@
 {% block content %}
     <div class="scene" id="birthdayNo">
         <div class="dialogue">
-          <p class="character-dialogue" id="dialogue1">Oh. That's too bad.</p>
-          <p class="character-dialogue" id="dialogue2">I'll get over it though!</p>
-          <p class="character-dialogue" id="dialogue3">If your plans change, please stop by!</p>
-          <p class="character-dialogue" id="dialogue4">Otherwise, I hope I can see you soon!</p>
+          <p class="character-dialogue" id="dialogue1">Oh. <a class="hidden" id="beat">That's too bad.</a></p>
+          <p class="character-dialogue hidden" id="dialogue2">I'll get over it though!</p>
+          <p class="character-dialogue hidden" id="dialogue3">If your plans change, please stop by!</p>
+          <p class="character-dialogue hidden" id="dialogue4">Otherwise, I hope I can see you soon!</p>
         </div>
         <div class="choices hidden">
-            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhen' }) }}">What is this place?</a>
-            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhere' }) }}">Where it it?</a>            
+          <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayJoke' }) }}">I was just kidding.</a>
+            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhen' }) }}">When it it again?</a>          
+            <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayWhere' }) }}">Where it it again?</a>
         </div>
     </div>
 {% endblock %}
