--- a/templates/hyper_link/birthdayYes.html.twig
+++ b/templates/hyper_link/birthdayYes.html.twig
@@ -4,21 +4,23 @@
 <div class="scene" id="birthdayConfirm">
   <div class="dialogue" style="width:48%; float:left">
     <p class="character-dialogue" id="dialogue1">Awesome.</p>
-    <p class="character-dialogue" id="dialogue2">I can't wait to see you!</p>
-    <p class="character-dialogue" id="dialogue3">Until then</p>    
+    <p class="character-dialogue hidden" id="dialogue2">I can't wait to see you!</p>
+    <p class="character-dialogue hidden" id="dialogue3">Until then, here is all the information.</p>
+    {#
     <div class="choices hidden">
-      <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayYes' }) }}">Should I bring anything?</a>
-      <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayNo' }) }}">What is this place?</a>
+      <a class="choice canonical" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayGift' }) }}">Should I bring anything?</a>
+      <a class="choice" href="{{ path('hyperlink_jump', { nextNodeKey: 'birthdayPlace' }) }}">What is this place?</a>
     </div>
+    #}
   </div>
   <div style="width:5px"></div> 
   <div style="width:50%; float:right;">
-    <div class="invitation-card" style="padding: 1em; border: 2px solid #333; border-radius: 12px; font-family: 'Georgia', serif; background: #fdfcf8; box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
+    <div class="invitation-card hidden" style="padding: 1em; border: 2px solid #333; border-radius: 12px; font-family: 'Georgia', serif; background: #fdfcf8; box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
       <h2 style="text-align:center; margin:0;">Greg Is Thirty</h2>
       <p style="text-align:center; font-style:italic; margin:0 0 1em 0;">an event</p>
       
       <p style="text-align:center; margin:0.5em 0;"><strong>Sunday, July 20th</strong></p>
-      <p style="text-align:center; margin:0.5em 0;">5 PM - midnight</p>
+      <p style="text-align:center; margin:0.5em 0;"><strong>5 PM - 11 PM</strong>(ish)</p>
       
       <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">hosted at</p>
       <p style="text-align:center; margin:0;"><strong>Acacia</strong></p>
@@ -28,7 +30,11 @@
       <p style="text-align:center; font-style:italic; margin:1em 0 0.5em 0;">featuring</p>
       <p style="text-align:center; margin:0;">Greg’s favorite cocktails</p>
       <p style="text-align:center; font-style:italic; margin:0.5em 0 0 0;">and</p>
-      <p style="text-align:center; margin:0;">Light Snacks</p>
+      <p style="text-align:center; margin:0;">Snacks</p>
+      <p style="text-align:center; font-style:italic; margin:0.5em 0 0 0;">and</p>
+      <p style="text-align:center; margin:0;">Board Games</p>
+      <p style="text-align:center; font-style:italic; margin:0.5em 0 0 0;">and</p>      
+      <p style="text-align:center; margin:0;">Greg (it's his birthday)</p>
     </div>
   </div>
 </div>
