--- a/templates/profile/landing.html.twig
+++ b/templates/profile/landing.html.twig
@@ -1,13 +1,10 @@
-{% block title %}Greg Suehr{% endblock %}
-
 {% block content %}
 <section class="section hero-section">
   <div class="card">
-    <img src="{{ asset('images/profile-welcome-bold_small_mingjun-liu-unsplash.jpg') }}" class="card-img img-fluid hero-image"/>
     <div class="card-img-overlay">
       <h1><strong>Hello</strong></h1>
-      <p class="intro">You are here early.</a>
-<a href="{{ path('hyperlink_jump', { nextNodeKey: 'birthday' })}}" class="btn btn-primary">Okay.</a>
+      <p class="intro">Did you receive my birthday invite?</a>
+<a href="{{ path('hyperlink_jump', { nextNodeKey: 'birthday' })}}" class="btn btn-primary">(Yes!)</a>
     </div>
   </div>
 </section>
